# Face-Tracking

./: .gitignore  .gitmodules  README  README.md
doc/: OpenSourceProjectsUsed.txt  report.tex
doc/report/: report1.tex
src/: .cproject  .gitignore  .project  CMakeLists.txt
src/Debug/: makefile  sources.mk
src/Debug/lib/awesome/: subdir.mk
src/Debug/lib/awesome/build-tests/: subdir.mk
src/Debug/lib/awesome/common/: subdir.mk
src/Debug/lib/awesome/objects/: subdir.mk
src/Debug/lib/lgi/: subdir.mk
src/Debug/lib/lua-5.3.1/src/: lapi.d  lauxlib.d  lbaselib.d  lbitlib.d  lcode.d  lcorolib.d  lctype.d  ldblib.d  ldebug.d  ldo.d  ldump.d  lfunc.d  lgc.d  linit.d  liolib.d  llex.d  lmathlib.d  lmem.d  loadlib.d  lobject.d  lopcodes.d  loslib.d  lparser.d  lstate.d  lstring.d  lstrlib.d  ltable.d  ltablib.d  ltm.d  lua.d  luac.d  lundump.d  lutf8lib.d  lvm.d  lzio.d  subdir.mk
src/Debug/wm/: main.d  subdir.mk  wm.d
src/MainApp/: .gitignore  CMakeLists.txt  MainApp  MainApp.cpp  Settings.cpp  Settings.h  VideoManager.cpp  VideoManager.h  Win.cpp  Win.h  grid_widget.cpp  grid_widget.h
src/tracker/: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CameraInput.cpp  CameraInput.h  Color.h  Face.h  FeatureTracker.cpp  FeatureTracker.h  FileInput.cpp  FileInput.h  Frame.h  HeadTracker.cpp  HeadTracker.h  Input.h  Makefile  cmake_install.cmake  demo.cpp  runUnitTests  tests.cpp
src/tracker/Testing/Temporary/: CTestCostData.txt
src/wm/: #wm.cpp#  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  README.txt  cmake_install.cmake  main.c  main.h  runUnitTests  test.c~  wm.c  wm.cpp  wm.cpp~  wm.h  wm.h~
src/wm-nox11/: CMakeLists.txt  wm.cpp  wm.h
src/wm/tests/: CMakeList.txt~  tests.cpp
